// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`P4a golden master (full precision) > edge loan devDrawLostStepsZero 1`] = `
{
  "balances": [
    "3000000",
    "2992249.999999999999999999999999999999999",
    "2865671.793092934915715142281422098192112",
    "2464284.633630925588275117139474884399725",
    "1922610.98167573316036784006247667098912",
  ],
  "drawMonth": 0,
  "drawn": [
    "1",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "-1439649.916024922345441464296400532123567",
    "suggestedInstalment": "12486.89940418029217058807845999922901946",
  },
  "schedule": "d88550d23d7ab3d6b1e97b0bc5edf56f21683fbf185018ba588d53fba8cb0afc",
  "scheduleMonths": 360,
  "scheduleShocked": "3a45d98a54627409ec6321a7d18b00cbc39dc9c36f8a5f974e48507488758850",
  "term": 360,
}
`;

exports[`P4a golden master (full precision) > edge loan devDrawsOnly 1`] = `
{
  "balances": [
    "3000000",
    "2992249.999999999999999999999999999999999",
    "2865671.793092934915715142281422098192112",
    "2464284.633630925588275117139474884399725",
    "1922610.98167573316036784006247667098912",
  ],
  "drawMonth": 0,
  "drawn": [
    "0.8139534883720930232558139534883720930233",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": false,
    "shortfall": "483262.331014196490085334054619110955562",
    "suggestedInstalment": "16488.14996156087228030285746127081549344",
  },
  "schedule": "c517e7154781f1c153f30a905142e83a41efd9224d86ac3c1ac1a6af94dea207",
  "scheduleMonths": 360,
  "scheduleShocked": "0b315f4f66d341490a8ec382a5a748f4bb263044d50759ee5856b461be678ec0",
  "term": 240,
}
`;

exports[`P4a golden master (full precision) > edge loan devFuture 1`] = `
{
  "balances": [
    "3000000",
    "2997500",
    "2956053.384331667999310410470885584949994",
    "2817070.77315803563896657798091055535156",
    "2611794.301385830179488595807416231916258",
  ],
  "drawMonth": 3,
  "drawn": [
    "0",
    "0.4615384615384615384615384615384615384615",
    "0.6923076923076923076923076923076923076923",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": false,
    "shortfall": "919353.4115963206725431579337521904621",
    "suggestedInstalment": "16104.6486903641695448547773733766358036",
  },
  "schedule": "16a4fbf0457a7f45cd35413675c4017ebca11d39dc4d06a5d3c68eb4625bff09",
  "scheduleMonths": 363,
  "scheduleShocked": "533892b1a9431187d1907144ee616404d6407ff2f624b2effdee7c23ede8cbad",
  "term": 360,
}
`;

exports[`P4a golden master (full precision) > edge loan devIoPastCompletion 1`] = `
{
  "balances": [
    "3000000",
    "2992249.999999999999999999999999999999999",
    "2865671.793092934915715142281422098192112",
    "2464284.633630925588275117139474884399725",
    "1922610.98167573316036784006247667098912",
  ],
  "drawMonth": 0,
  "drawn": [
    "1",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "-1439649.916024922345441464296400532123567",
    "suggestedInstalment": "12486.89940418029217058807845999922901946",
  },
  "schedule": "eb2074c7eb08b6a68d8380938d9edca7b355bab8201e2072831d41ec1ae4a2f9",
  "scheduleMonths": 360,
  "scheduleShocked": "960ff2f8ac9f798a2c9609b994fc171eb594e819fb8bab71e60fc2a08c39e164",
  "term": 360,
}
`;

exports[`P4a golden master (full precision) > edge loan devRunning 1`] = `
{
  "balances": [
    "2000000",
    "1997166.666666666666666666666666666666667",
    "1950227.300371327063450967294645820990694",
    "1793245.558059118348202400494410364246144",
    "1562379.430677093051405412208334642210392",
  ],
  "drawMonth": 0,
  "drawn": [
    "0.4444444444444444444444444444444444444444",
    "0.4444444444444444444444444444444444444444",
    "0.7777777777777777777777777777777777777778",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "-314939.880397376721896604918340089482957",
    "suggestedInstalment": "10614.53441245622082399034706360919214097",
  },
  "schedule": "b1790cfd3634de31a986ff2ebae5c7d69ec446a0cda5ea07c3e316c2f6ed3a19",
  "scheduleMonths": 360,
  "scheduleShocked": "683104ca9abc4f6c78f22a7a1474e8c79c9e141da306c58dfec454981e1e828f",
  "term": 360,
}
`;

exports[`P4a golden master (full precision) > edge loan explicitTerm 1`] = `
{
  "balances": [
    "3000000",
    "2998250",
    "2969667.824246791755161483740966280236929",
    "2879032.014045692874771800644397554541874",
    "2756718.608765488132986286465720538610447",
  ],
  "drawMonth": 0,
  "drawn": [
    "1",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": false,
    "shortfall": "2230294.959800453645474818042660422928076",
    "suggestedInstalment": "14070.79462366380671988704527154820089849",
  },
  "schedule": "645c0f936298bcc09c7030e9b48dbebbe6c374a9cc7e7ee063083136eaaaa6a9",
  "scheduleMonths": 360,
  "scheduleShocked": "645c0f936298bcc09c7030e9b48dbebbe6c374a9cc7e7ee063083136eaaaa6a9",
  "term": 300,
}
`;

exports[`P4a golden master (full precision) > edge loan firstGridMonth 1`] = `
{
  "balances": [
    "3000000",
    "2992249.999999999999999999999999999999999",
    "2865671.793092934915715142281422098192112",
    "2464284.633630925588275117139474884399725",
    "1922610.98167573316036784006247667098912",
  ],
  "drawMonth": 1,
  "drawn": [
    "0",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "-6275.099953328148526407583916930240963",
    "suggestedInstalment": "14983.82316221191861182291118095821470727",
  },
  "schedule": "b3cbf3eba1ba31b633f4c936046b622cbfdecd25be68fc74e69801cca0ba4a15",
  "scheduleMonths": 360,
  "scheduleShocked": "5a2ede5d4a855c1a677f2f0babbc66ce917e1543397886eee8b418b00341fee3",
  "term": 274,
}
`;

exports[`P4a golden master (full precision) > edge loan futureMonthEnd 1`] = `
{
  "balances": [
    "3000000",
    "2992249.999999999999999999999999999999999",
    "2865671.793092934915715142281422098192112",
    "2464284.633630925588275117139474884399725",
    "1922610.98167573316036784006247667098912",
  ],
  "drawMonth": 8,
  "drawn": [
    "0",
    "0",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "-6275.099953328148526407583916930240963",
    "suggestedInstalment": "14983.82316221191861182291118095821470727",
  },
  "schedule": "895c3ad1ea563306d1fa353338eb3cbedbbdcb2af741851a4bc7eb4483680794",
  "scheduleMonths": 360,
  "scheduleShocked": "fd88c39e3374b1c1c1ecc2ef934e7cfef8a65b358de4f2af401044e5e3fd17cb",
  "term": 274,
}
`;

exports[`P4a golden master (full precision) > edge loan monthEndPastFixation 1`] = `
{
  "balances": [
    "3000000",
    "2992249.999999999999999999999999999999999",
    "2865671.793092934915715142281422098192112",
    "2464284.633630925588275117139474884399725",
    "1922610.98167573316036784006247667098912",
  ],
  "drawMonth": 0,
  "drawn": [
    "1",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "-6275.099953328148526407583916930240963",
    "suggestedInstalment": "14983.82316221191861182291118095821470727",
  },
  "schedule": "cc08173521cddadbc9589a61f3db8a809041fb2e1f0d808c01f6a63cb33c415d",
  "scheduleMonths": 360,
  "scheduleShocked": "cc08173521cddadbc9589a61f3db8a809041fb2e1f0d808c01f6a63cb33c415d",
  "term": 274,
}
`;

exports[`P4a golden master (full precision) > edge loan zeroRate 1`] = `
{
  "balances": [
    "3000000",
    "2980000",
    "2660000",
    "1720000",
    "600000",
  ],
  "drawMonth": 0,
  "drawn": [
    "1",
    "1",
    "1",
    "1",
    "1",
  ],
  "health": {
    "fullyAmortizes": true,
    "shortfall": "0",
    "suggestedInstalment": "20000",
  },
  "schedule": "38556d754a0ae4bddfa31f8da8843278e7d8c515837cd6731da364797a94f5d9",
  "scheduleMonths": 360,
  "scheduleShocked": "38556d754a0ae4bddfa31f8da8843278e7d8c515837cd6731da364797a94f5d9",
  "term": 150,
}
`;

exports[`P4a golden master (full precision) > edge loans inside a portfolio (projection, snapshot, KPIs) 1`] = `
{
  "devDrawLostStepsZero": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.057414163703168861321400459415896843845",
      "cagrReal": "0.03162357434455498665502483845453350619",
      "cumulativeNetCashFlow": "11197012.29760104653691525770094221339943",
      "debtFreeYear": 2056,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.06243653444971514754335828456532908603565",
      "leveredIrrReal": "0.03652344824362453480637302760669626877646",
      "netWorthMultiple": "5.337694333970369715414004124518907326007",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "11272497.82156813201455799447495754255197",
    },
    "projection": "51209173a90d245c657b8dc04270938f411cfaf32a40c0c4690f4627e83a5da1",
    "propertyProjections": [
      "ee82fc3fc893a536425c1290e52ce1f1bcf7c8133ff2b52fb08b39ce28e52135",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "32c17348765c6bb01ae5f7ec2b5d61a8b1077d4f18082ea1095f2317e5d40c22",
    "snapshotsClosedForm": [
      "dc6aafe1b7a1b7a5f2d238b831c43356afdd512ccc2b4ab336c349e00f254eab",
      "9130c1ecf26d639fc7a91057dc2b62b072a738b40d791748be96cd8d291999b2",
      "c44fcc48a9d07a253158790fc889651b0195717c76b9cf5700c8cc6bb724d6a3",
      "28e2679630a588e79b9102fa9fdca41e1efe64d27990ce6b5a88897c3b0d5676",
      "0e68b33673e38385cf45681ae24724913f6fb02da2426d2f7fb4ff59a89c0a73",
      "1638cf12d23084c37a89d222beec8bd0dcf55d981d0bb979bcd46589a379b500",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "010ad789e83fae33d8d45a6a9fcab441a4bafe6e30fa21c6b52ba4acbf67c737",
      "056b18e596650a36ebd273b7a6a5009052e33e0c3968d60d9e95840f270fd509",
      "e5e387df0db2d26f3b2764e5f12d8ea24cf700f48089f381ca0643c39e83ff71",
      "76cf80f16d40c5d424b1ea8f8edff4a86f6a9be7cc951e8db2436adbe02a7097",
      "7137dd060ae7270694b75f7a1f846d36aff0be5832d001b2e0b7da64f495c294",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "devDrawsOnly": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.061359386729257089172938255855876349702",
      "cagrReal": "0.035472572418787404071159274005733024099",
      "cumulativeNetCashFlow": "11185181.34998059550955442520882090597563",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2041,
      "leveredIrrNominal": "0.0645916763266908364876650594510465452915",
      "leveredIrrReal": "0.0386260256845764229222117691620042023715",
      "netWorthMultiple": "5.968620354578077656634919417359059433699",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "12020206.711811413007943234811691694518",
    },
    "projection": "b470b6235d4b5b0dcaa2edb985abbb5aa28a2250aa96d7e400f87030b95ceabf",
    "propertyProjections": [
      "a56f64a2daa67cfe08622984494b60cebe33f99f5feb4ca28941bd0dfb58bf6d",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "4bca767aea660502547edc9c63015c34f846fd594c8b746c0f58fb43fabe813f",
    "snapshotsClosedForm": [
      "48bbd1c0073830a84b99c365cb1a4b1927cf2a4bf66c4d02de4174060adde119",
      "8f409e5a565b1c9c51b70b80a21cd1092283606820b9293d9da3132841ac1f82",
      "9f3e65feca6aaeab086f09008ca0a579d96cc4c1c0bdbb47a45774a9e4a84ebc",
      "1dc7add4908610d8b71c8e365fd3b4249a9c46ff07481ee5d8126c87b6eaccd8",
      "73986712f554e95466b43323fb274ed5f7cd7ba121d695891904c6da97e42d16",
      "1638cf12d23084c37a89d222beec8bd0dcf55d981d0bb979bcd46589a379b500",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "b891825a21befa4e202851be972439e7299ad745647a8377ffeb2cbf3a524ef7",
      "7f3293bf94c300c8d3d09401758aca413d971454939b063baa4d2ebd7f1e836d",
      "afcb7a7c860347410da0d98a8c71b2b029df584727e5232dc63749f7e94606fa",
      "ea10b688802b1067fd337c59562a6d82063aecf8fb89bf9c38a58be33a55c0ca",
      "8b64e45d6d3a1b79888210b5016a194f0dc788b4300d974852ef103d86ff54ff",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "devFuture": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.074913683691437024794977727818686067435",
      "cagrReal": "0.048696276772133682726807539335303480425",
      "cumulativeNetCashFlow": "5113384.726593327247229689190935371203949",
      "debtFreeYear": null,
      "firstCashFlowPositiveYear": 2041,
      "leveredIrrNominal": "0.0729409440149791046814620187888067448513",
      "leveredIrrReal": "0.04677165269754059231943621455229731509465",
      "netWorthMultiple": "8.733890549665634871526835557187295659583",
      "netWorthNominal": "93081457.55924700853180506816995179161167",
      "netWorthReal": "44375904.01735392173956470746614198652469",
      "totalPrincipalRepaid": "14271144.9177239725531408544641159334352",
    },
    "projection": "17ef5c5492c9496cab5285c2ef38e6b59b091d7798a2441ae3b71a45144adfe2",
    "propertyProjections": [
      "b95a063ee2953913a6392eaf1e1438fbdeb07d1a68691433365c4623bd02bb20",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "b4274fd1df6b10e928ada83340cd269cd3a89c7795f3911857724b3f5dd7e87f",
    "snapshotsClosedForm": [
      "12c2f52d08e109c83d12f40e5adbdca2988f0a9b1c081d0ab82edabbabb29704",
      "94e4952bfc9a1777d9ce6299f1283b03de00692ca7d902d6e19283dacea2905b",
      "8bc39629d0635ca833c3a0c6e3c7439b6a84e925fa36c30d72e3ba4babac87ee",
      "c9ad5a0df2ef16dce848ca439379511df09d25ee5208b3e48d400ce1e08f9ab5",
      "7bf145bfcfd7767f632bbc05fcd0bb1bfd0c464d9493b24fa58bfce7f01e3370",
      "817a5a841352cb110f85631890fd3268e8df6da54b5bada3f91899a50a8477cc",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "12c2f52d08e109c83d12f40e5adbdca2988f0a9b1c081d0ab82edabbabb29704",
      "6b00d8d18b36871ba31409fc8459288407db45e7476309f1ec902dccaef64b56",
      "facdc5a97ead502b7fecbcf7df9194e7f22e7f9106811681e0e16da0a1a5053d",
      "44447d185988811a2385ae53d524b6f22a71f790adc11b3f0afb6d8a223450a3",
      "4fdb86b686712305322e5fad7db8ce4129a691ab4cab80d3363c09a13da76fe8",
      "0179b2dec2ca79805687db91f2ddc39c3439f6e5389c3a9b76d80c8839f61d75",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "devIoPastCompletion": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.05655914667277657112230753650929188994",
      "cagrReal": "0.030789411388074703533958572204187209697",
      "cumulativeNetCashFlow": "12070210.81899293377817780742403918122485",
      "debtFreeYear": 2053,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.06194454964690534349430750538090251211555",
      "leveredIrrReal": "0.0360434630701515558090508584143663028954",
      "netWorthMultiple": "5.209720477585759366378477200161383543695",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "10843664.08927315675571469829048151571167",
    },
    "projection": "956b2ae8b945ce88ba8b92a0bdc5e49bba679b7b1ed5a59c05c5be2d3ff89759",
    "propertyProjections": [
      "f5d612aa68ef205a61b5d5634aa9ff4a21b2a716b61fcbdfa3652d994866da19",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "85039e116db291768bef2738aa45f429c4da150c85c57b80c322c2ea330f8e9a",
    "snapshotsClosedForm": [
      "76b1a5bd659b21e6d4839e937ec1018717fca0339a30e2dbd4f8f17d1be37d5e",
      "84ce42df9d00cb7cea487adec207680d29cc32b1b7d4ddbe2e5754c31751e8fa",
      "f0e935250c1fcdcfe9d1706135739971f1ea521bb62c1aacc893f38d937e959d",
      "b3649d1400048d8ab3824252ba5fde3642e2cba91e31827c9ded59286e0b0abb",
      "c01f1353088fff0dd82e4b61312bb34652bb83a2c6cec55a37c297119731d3e4",
      "1638cf12d23084c37a89d222beec8bd0dcf55d981d0bb979bcd46589a379b500",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "e6e993fe16614e807c7419369c8c5d5db37de9f3074470525c7f85d5165fcc0d",
      "9574c6fb0ae9773738d7659b8aece59fea5b16b86c20c58915a4d9e1eaf9b77a",
      "5da3dd7ae745a5230b0117f7862a0aa126057efac3d0e9535e04ba9cdb09a883",
      "41f82bb9068aa6b9060689f38ebee5154273b6178dd3c800083e6ab318b35324",
      "a533642f1bf175f38cf89870ebad228196ca01fdea0ab0775b6504eb485c16c0",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "devRunning": "ORPHAN_ROW",
  "explicitTerm": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.056110859767596418564519224328385193782",
      "cagrReal": "0.030352058309850164453189487149644091495",
      "cumulativeNetCashFlow": "13063584.60725368495233961676759399036197",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.06171404772149530759683955238870112225425",
      "leveredIrrReal": "0.03581858314292225321795459791474058874886",
      "netWorthMultiple": "5.14381395259795977301566640791813253398",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "10614490.51194244630959775385673582553406",
    },
    "projection": "d5e5b26fd960c985f797947ae91a9fc6f145e028e4b6513251e36921d48648fc",
    "propertyProjections": [
      "348d82023c97e2e0b893afd9cb86c71ba46d3707367ba75021cf7c7f434ad5cb",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "10f8d9a9bbef380302b9b33ac487e5075362f542e697bc5461d451fb69ae26e8",
    "snapshotsClosedForm": [
      "eb9acc05d975f4729d74884eb9293e510aee8ab195230666582f4546b7b88cda",
      "eecb6e4a1a5464fef5d4b5d6913e5aaf1f4f297494c79173163a646f7e8a1235",
      "46f5da0c651e1226fa13e2d04b37853714584d00b7ee91c1e03993348416e55a",
      "7890d2325d599e52661c8f2d79bec393e5bb592432184e85da595b82de47e42d",
      "f5f252e961ec80821beb96302945fdab4dcbfec41a48687d5a802c63921f1e73",
      "679b413b909c3fb693909145e614f5093e58ebc84ec05a0e86ded934c8c3b13a",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "24d511c329c61e6ba4d31d2eb8dc5938cc92d55c9e9faa1dc44b270baa482756",
      "d62cf4cac08181eaf4d175c5bdc7c32b4f256472dc8d372f2239895ede813607",
      "74659abe2c752728d5b533bc647bddc2ed5bf68a8c46273b460560d8df74ed31",
      "840f9fa7c74a2216c8d76e1031a8f58e4c0e584b92deef27ad5a4e5420de320b",
      "c74f800537dc590fe0c94db64fcf08a4d0f0401e0977dc0b6b9a7223210f420a",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "firstGridMonth": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.05116070354641345923837613583699164156",
      "cagrReal": "0.025522637606257033403293791060479650303",
      "cumulativeNetCashFlow": "12560469.67588473095011578730392541699458",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.0565667159393685645835114783608332800215",
      "leveredIrrReal": "0.03079679603840835486194826842165639391172",
      "netWorthMultiple": "4.467592028322968732434266098195519932551",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "10872497.82156813201455799447495754255196",
    },
    "projection": "1e35cb548fdcbcf27e54ea8b4015f37cee1aca960117e7d05a1967bd2f9f45c3",
    "propertyProjections": [
      "22991640cac3b89c772d9560a4b6a31d52ac361b6dd9518677bb7f4d3f7d09e4",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "c1e884750d3dc3782a5f60d82a5a657782f2ec9f70b6c86e54f16ece1d7a7ed6",
    "snapshotsClosedForm": [
      "ffe9b0b9cf287f2d5bf1702beebcff9124661121d096afb70840fa18958656ef",
      "5808516dda10c498fbd86a8e87609b594aa6e07c64412769f532e625f7611cb8",
      "ccc0f1c99e0893ce400646c19ee4b789eb414ad47c48bac55ef3a59ffb9c5af5",
      "8721c82c92127ac6a045aca365f341075156ef06e8a248cfc83ded6872965dda",
      "6a8fcda6545165d5a1313fea0ef0f7a72dc4b3f1e87054f5d10e9d5819625b3e",
      "1638cf12d23084c37a89d222beec8bd0dcf55d981d0bb979bcd46589a379b500",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "ffe9b0b9cf287f2d5bf1702beebcff9124661121d096afb70840fa18958656ef",
      "7455391879e46f8b8253a0720eec6a9954342767291e1b57c95e5560f54ffca1",
      "88386673db908f4f373795769e1def1310d1e7d10d0c097510e8dc9f88656f1f",
      "7cf9d8c31f378053e981bf938fd4f6d83a895d34cd5c6da47c5d23e340208c25",
      "2563afa35ee8131e734c0bfa89eae735570b4ca98005d4413ec0f24e2ed73fa8",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "futureMonthEnd": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.05116070354641345923837613583699164156",
      "cagrReal": "0.025522637606257033403293791060479650303",
      "cumulativeNetCashFlow": "12659724.16425516225399429578201698612277",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.0568079568891251865739300264124267414446",
      "leveredIrrReal": "0.03103215306256115833122288805157040769703",
      "netWorthMultiple": "4.467592028322968732434266098195519932551",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "10872497.82156813201455799447495754255197",
    },
    "projection": "7e7030485895c5539e8a38faeb8ad2b643304c0a07666b8b02c2f0a5db4abe39",
    "propertyProjections": [
      "ccec740618dc6621c3e4c3d828aa628ee55dd7cd9220eda74b599f491e2b78a9",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "b3f88ae55ddc1362d61777a5464787c1b1db8b04ceb087e3fe5c7aa7f8040069",
    "snapshotsClosedForm": [
      "ffe9b0b9cf287f2d5bf1702beebcff9124661121d096afb70840fa18958656ef",
      "d74f1c359ffaeb4de725fd70bedbc6df28fdded37f296a0ce881558ba314a010",
      "019560b4d30ae9beb186e094e5356cb72057cb46ecb86305f238c59c74c7dc0b",
      "2e096ce70b956c3fcbfdae5934dac2cc38c27874604edea4a905d7eeac847cfa",
      "5068c68fbb12e8c92ac1d83b18b13d770d0ef8cb56352a5bf6c0749997be60a6",
      "1638cf12d23084c37a89d222beec8bd0dcf55d981d0bb979bcd46589a379b500",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "ffe9b0b9cf287f2d5bf1702beebcff9124661121d096afb70840fa18958656ef",
      "a94f51b12a155f9635d84f4ca012283f4d291a08006f9fbae00103f1b798c0e8",
      "b9eb6a6650628a073c9cb0d0fd1b88321ec00c3d16645994351c73d8a78dda4b",
      "45d2938ce72a0f6e5a9dadf5531a2b604485d4f0e07ab1607a445ed916b4c4f6",
      "73ba1becdfa0d9783092d931904a16a3fc6d77f975080c01aea73509308a7111",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "monthEndPastFixation": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.05564497413777314323487697472495856966",
      "cagrReal": "0.029897535744168920229148268024349824059",
      "cumulativeNetCashFlow": "13582814.18893307413590511128785106667912",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.06160124246140693624745887646554365346685",
      "leveredIrrReal": "0.03570852923064091258287255925552017288286",
      "netWorthMultiple": "5.07617436791423228925845620457161307302",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "10373102.91386239531308819957044906050267",
    },
    "projection": "b23ba0ec8b818bff0dd34cb71c5d1a1317b4a5dbda291226bf37948fb1790415",
    "propertyProjections": [
      "ba0c0985bb75489ad75bac6456631fc141dae63702e2289aabf1e9e455191f85",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "73efb615b31a3028dfbfd84da677e1f73967c56d6860cac4fd75ee0cb0e3a674",
    "snapshotsClosedForm": [
      "d9ea06ed23028f41eab7eefaf6449a50907d7f8584c1c416ab19151a805c8fb4",
      "f7f22efe91f5d9f1aaf47296cab2f7e962a8dc9db5101cd3972116fd36122a83",
      "f1aeec830bdd4baa0ee7bfb519e73b3d10b6177c6dcef3a6a1a3fef9edf6885a",
      "2ac88816fb407abc6e92ec35afad3122bdcc3eba001b081eabddc36da5852358",
      "3f6bc8cecd353979eaca9e10e93172353c3018c35dc8473e15715ad6488e039e",
      "1638cf12d23084c37a89d222beec8bd0dcf55d981d0bb979bcd46589a379b500",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "4373dd1bf6fb579dd458ca1a627bb72efb60a71655bddaa1374c9fcb4bd97b4a",
      "8628f12190e8f429178c839f7919bbb7bbb6cbc8043728c23ad9ef23448ec541",
      "8f08232f1240a7c7e8b8d0e5ac18ac5c789a90b4d4bdb0a5312d2b3bea459d9f",
      "0b67a1b91195487bc85c984062d57c01e883a7e78259027c3646b6c9770bd047",
      "70eac1d062261030fbe3fbadee32215c0af0b19a5a1cce5457e0df16426f02d4",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "zeroRate": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.054340041334637161663389490131376454978",
      "cagrReal": "0.028624430570377718695989746469635565833",
      "cumulativeNetCashFlow": "15083457.97872202782787316703059932174567",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2034,
      "leveredIrrNominal": "0.0612434213027099187340307473448319797173",
      "leveredIrrReal": "0.03535943541727796842616404759951365122108",
      "netWorthMultiple": "4.89126293237083044072811853033030307224",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "9679130.776348433324671300168156255389003",
    },
    "projection": "e316fa3e0db6ee11a81def2bfd166dd989debd3108e868e48854b563d2738a6c",
    "propertyProjections": [
      "86444ac3b03ba8d4fdf546234aed41a6b3ab8b711005562006f9eff90dfc502b",
      "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
      "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    ],
    "schedules": "d065806a524a334ac7020abb7c2b42da5f75a0e8a7f81cb37b3575db6e6e3bd5",
    "snapshotsClosedForm": [
      "0998ac12128ec992d1feebf1b37bf5c7306bf589e26dfb430e32d30f5cd3552a",
      "e12a7d50a0357e05d90165a23720e3b090d05fc60c5e4f90b1b7e54ddb299d5a",
      "a038be24ed748c988b1d8efa217f98a01f51c94b4b9f8d0a2d1d20b0390d2752",
      "b3f9cd8fae1af3da3308f050b13c4eaa49f463466625b158556830d79c8028c4",
      "1637fcd591c320369dfeea3cb3276c133a60116c289828125a33ef5d4cd1d47d",
      "1db00c1dd9ffabe69aac872b0b70ddd4faaa26f6817e30fe3a1b57394cf52a1d",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "b03e85c93b4660bb66f5865ab4c28ce55ecf56c774c41174e2f92f64ad394ce9",
      "3fc5d98ac48ebc3563446460c62d733ef73363a9f9a401d453966072ed56767f",
      "706a471432a26d02890adb491bc5a3ee62d54fc58d9623b430a14df5c0fe2cc3",
      "25fba208175de4370012e6247c5c1f5fd7fdf2302db759f4a8d8ba52e0be9582",
      "6e539955cfd190eba4e533849d27db883c254312b333c3689402802e1947b33a",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
}
`;

exports[`P4a golden master (full precision) > horizon lengths 1 and 5 1`] = `
[
  {
    "cpi": "6fb9b8c307398fbed4fa5563b938d528c7e7f5f3a5dd78e8e0f9c3dd4ac213d9",
    "kpis": {
      "cagrNominal": "0.159906672164592015375290484458633661034",
      "cagrReal": "0.131616265526431234512478521423057230277",
      "cumulativeNetCashFlow": "-199847.5750000000000000000000000000000001",
      "debtFreeYear": null,
      "firstCashFlowPositiveYear": null,
      "leveredIrrNominal": "0.1505840393237140695248399424599483609201",
      "leveredIrrReal": "0.1225210139743552362201484129400341771545",
      "netWorthMultiple": "1.159906672164592015375290484458633661034",
      "netWorthNominal": "24864707.17177615254806587868566323010737",
      "netWorthReal": "24258250.89929380736396671091284217571451",
      "totalPrincipalRepaid": "316467.8603184753373433860994527250545974",
    },
    "projection": "d777084f48df02e48a147903609e30be55557a1eab4ffec17272fd74c776dc10",
    "propertyProjections": [
      "6f431a66fa7648d30f9d660b5f7166ad835b092b20811d07cbb9b98157054f31",
      "18365e51e1c2c15a95a2c4026f3a9cf18ae329d3407f10acc87ea97493a40909",
      "b8010570d5f9f009921a8f9dc7f73bf6526891e41cb155be5259d8d117abacca",
      "cdc42b63df5ae9892291ae22cdb034991befd950b2cc431690e12bcc33b4f497",
      "48846fecef569574715fa8f21bed3a0529021c70a4660244411d951382c9a17d",
      "53603786a17cb1e9700d4a51ce1ca5e415e2eb1d1c5972c10523c5099c0387ce",
    ],
    "schedules": "08d677976a901bdb9052b75d6519ba1f270788ee6304e5e76e45c7ef316a4a64",
    "snapshotsClosedForm": [
      "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
      "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
      "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
      "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "d1bf6d6c2e91f1e711e7c06c6eb82665834e966117ecf0fbe1aeea50525bc536",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
      "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
      "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
      "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
      "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
      "3dc1a1a2054f015ab3cef7ba2cc35e212b951ae2f5cc88baa96b4d0fcadbd701",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  {
    "cpi": "7e9adb10544221474d5630cb7c89e9da3908c3e4de44a3f584295eee3a454775",
    "kpis": {
      "cagrNominal": "0.119999411733779856434383357487424075804",
      "cagrReal": "0.092682352911004737984764251207243000784",
      "cumulativeNetCashFlow": "-2695330.246796839030973337766369817349258",
      "debtFreeYear": null,
      "firstCashFlowPositiveYear": null,
      "leveredIrrNominal": "0.0985594013708274985230417541970382444562",
      "leveredIrrReal": "0.0717652696300756148817256985239509958775",
      "netWorthMultiple": "1.762337054963430701570796849589254034971",
      "netWorthNominal": "37778897.09683295458451013196485606096285",
      "netWorthReal": "33391040.18019453744606935206861530564597",
      "totalPrincipalRepaid": "2348542.96934299321763945654931221561113",
    },
    "projection": "7be8882e399a185b525b4e3d4b388569a96473614f8fa3621dfdfd90d2b37aea",
    "propertyProjections": [
      "6c1d6c43901ea7aac9fd37808c2af2dfda4c1752c7b0d63180f924fafe104a76",
      "30c69670768442778eaad39300484dcb269b8223381738b9c3256254abf5522a",
      "98469424117fa49d7ed63e4352541b320c2343289eeee04886810612d1c54d6f",
      "169eee20bb421d8e8aca9c89c4918324b6527d4ff03d480d03105688fc1aede6",
      "18a4733b6981be3bdb2f70f0625eff2b76704f2ba3341128a73f899f42ccfef1",
      "9cec8a8c01a24266d908274519a4e1e754ff82d2d2b8e78f3567cf0bb93fafa9",
    ],
    "schedules": "08d677976a901bdb9052b75d6519ba1f270788ee6304e5e76e45c7ef316a4a64",
    "snapshotsClosedForm": [
      "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
      "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
      "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
      "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
      "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
      "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
      "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
      "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
      "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
]
`;

exports[`P4a golden master (full precision) > irr samples 1`] = `
[
  "0.09999999999927240423858165740966796875",
  "9.0000000022351741790771484375",
  null,
  "0.1892071150025003589689731597900390625",
]
`;

exports[`P4a golden master (full precision) > mixed fixture 1`] = `
{
  "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
  "kpis": {
    "cagrNominal": "0.065304150866868528139064126668881980432",
    "cagrReal": "0.039321122796944905501525977237933639446",
    "cumulativeNetCashFlow": "14749950.47501994320285082934214499464348",
    "debtFreeYear": 2056,
    "firstCashFlowPositiveYear": 2036,
    "leveredIrrNominal": "0.067398549372208758738433953539015419665",
    "leveredIrrReal": "0.04136443841191098386850244494894468516581",
    "netWorthMultiple": "6.671270901435258693792364652138901632503",
    "netWorthNominal": "143010814.0668065722076036079333399803885",
    "netWorthReal": "68179359.50812580922048359424316863375379",
    "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
  },
  "projection": "f47935ea9290689d1cadb475a0d1d15b4f91e8c6070d7a36e0583f66078d210f",
  "propertyProjections": [
    "7a14527cf97195fcabcdbd2f904ccfdc32f738ff7ded2894e86271a2b8cc8329",
    "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
    "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    "9547ad1a1a1c3584229c3f6461a5d67aeba52f1c1ac9cb787565a981d7e451a8",
    "7ea44d91562a06a666694e7fe29704a9a0d27d007663d987aef7259c68f4a946",
    "4320c44f3cb904c104af191b8d2d3f281fd46a168d2ddb7c6aebdaf71988aabb",
  ],
  "schedules": "3c10916436cbe0f0f944e69ff98649cc5ab4189402f92bd776dc10dc3df16d0b",
  "snapshotsClosedForm": [
    "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
    "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
    "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
    "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
    "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
    "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
    "ASOF_BEFORE_BASEDATE",
  ],
  "snapshotsWithSchedules": [
    "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
    "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
    "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
    "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
    "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
    "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
    "ASOF_BEFORE_BASEDATE",
  ],
}
`;

exports[`P4a golden master (full precision) > mixed fixture with a funding record (ADR 0119) 1`] = `
{
  "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
  "kpis": {
    "cagrNominal": "0.065304150866868528139064126668881980432",
    "cagrReal": "0.039321122796944905501525977237933639446",
    "cumulativeNetCashFlow": "14424949.97501994320285082934214499464348",
    "debtFreeYear": 2056,
    "firstCashFlowPositiveYear": 2036,
    "leveredIrrNominal": "0.0669572584795171760196907939644006546588",
    "leveredIrrReal": "0.04093391071172407438133467039165225287436",
    "netWorthMultiple": "6.671270901435258693792364652138901632503",
    "netWorthNominal": "143010814.0668065722076036079333399803885",
    "netWorthReal": "68179359.50812580922048359424316863375379",
    "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
  },
  "projection": "f47935ea9290689d1cadb475a0d1d15b4f91e8c6070d7a36e0583f66078d210f",
  "propertyProjections": [
    "7a14527cf97195fcabcdbd2f904ccfdc32f738ff7ded2894e86271a2b8cc8329",
    "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
    "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    "9547ad1a1a1c3584229c3f6461a5d67aeba52f1c1ac9cb787565a981d7e451a8",
    "7ea44d91562a06a666694e7fe29704a9a0d27d007663d987aef7259c68f4a946",
    "4320c44f3cb904c104af191b8d2d3f281fd46a168d2ddb7c6aebdaf71988aabb",
  ],
  "schedules": "3c10916436cbe0f0f944e69ff98649cc5ab4189402f92bd776dc10dc3df16d0b",
  "snapshotsClosedForm": [
    "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
    "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
    "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
    "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
    "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
    "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
    "ASOF_BEFORE_BASEDATE",
  ],
  "snapshotsWithSchedules": [
    "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
    "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
    "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
    "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
    "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
    "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
    "ASOF_BEFORE_BASEDATE",
  ],
}
`;

exports[`P4a golden master (full precision) > mixed fixture with acquisition costs 1`] = `
{
  "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
  "kpis": {
    "cagrNominal": "0.065304150866868528139064126668881980432",
    "cagrReal": "0.039321122796944905501525977237933639446",
    "cumulativeNetCashFlow": "14509950.47501994320285082934214499464348",
    "debtFreeYear": 2056,
    "firstCashFlowPositiveYear": 2036,
    "leveredIrrNominal": "0.06707220679091359816920148162466830399365",
    "leveredIrrReal": "0.04104605540576936589108880681919799826577",
    "netWorthMultiple": "6.671270901435258693792364652138901632503",
    "netWorthNominal": "143010814.0668065722076036079333399803885",
    "netWorthReal": "68179359.50812580922048359424316863375379",
    "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
  },
  "projection": "f47935ea9290689d1cadb475a0d1d15b4f91e8c6070d7a36e0583f66078d210f",
  "propertyProjections": [
    "7a14527cf97195fcabcdbd2f904ccfdc32f738ff7ded2894e86271a2b8cc8329",
    "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
    "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
    "9547ad1a1a1c3584229c3f6461a5d67aeba52f1c1ac9cb787565a981d7e451a8",
    "7ea44d91562a06a666694e7fe29704a9a0d27d007663d987aef7259c68f4a946",
    "4320c44f3cb904c104af191b8d2d3f281fd46a168d2ddb7c6aebdaf71988aabb",
  ],
  "schedules": "3c10916436cbe0f0f944e69ff98649cc5ab4189402f92bd776dc10dc3df16d0b",
  "snapshotsClosedForm": [
    "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
    "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
    "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
    "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
    "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
    "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
    "ASOF_BEFORE_BASEDATE",
  ],
  "snapshotsWithSchedules": [
    "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
    "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
    "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
    "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
    "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
    "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
    "ASOF_BEFORE_BASEDATE",
  ],
}
`;

exports[`P4a golden master (full precision) > scenario inflationShock on seed and mixed 1`] = `
{
  "mixed": {
    "cpi": "685bab8381ebdc2e943b8dcbdbcc9237d1db8ea68b7bd07cfb8371e964242a0e",
    "kpis": {
      "cagrNominal": "0.065304150866868528139064126668881980432",
      "cagrReal": "0.034382808510652854887708801737879009635",
      "cumulativeNetCashFlow": "14217317.73307866595534903922467158993712",
      "debtFreeYear": 2056,
      "firstCashFlowPositiveYear": 2037,
      "leveredIrrNominal": "0.0670973721858863000194750370042129361538",
      "leveredIrrReal": "0.03629345914513401969575534522505222412295",
      "netWorthMultiple": "6.671270901435258693792364652138901632503",
      "netWorthNominal": "143010814.0668065722076036079333399803885",
      "netWorthReal": "59101583.96945600887072773213469789335463",
      "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
    },
    "projection": "6f290a1c0f38cc051cfbe7084fed0ba4851a02a61d898b0e324ade010223b9c6",
    "propertyProjections": [
      "217ed8219064ad403c859c0a8f3fecf64decf6f7f1c9aabe0673c249e7a4838a",
      "1ab244c785b7d98c92f0cbf359ee9739f32dec9848300b4c5bf940e5b54577a7",
      "50a38f5fe3f1511ccf7e6604437a83159125e84755be1361ea100302765f3f6f",
      "330e82b82048d0b4eb05020b7d8755a06fd5928bd8d3708cdccf9afd94a72cff",
      "c16259cb55a1f8c37d20ee57f6c8a40b2923b1e53c44b683fadd6f4e90c001b3",
      "365f5b6569b1ed08789487b715f28e061d42b5d9db085fe298a9ca9dd3a5c618",
    ],
    "schedules": "3c10916436cbe0f0f944e69ff98649cc5ab4189402f92bd776dc10dc3df16d0b",
    "snapshotsClosedForm": [
      "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
      "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
      "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
      "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
      "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
      "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
      "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
      "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
      "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "seed": {
    "cpi": "685bab8381ebdc2e943b8dcbdbcc9237d1db8ea68b7bd07cfb8371e964242a0e",
    "kpis": {
      "cagrNominal": "0.054039336872146196791459810077636764323",
      "cagrReal": "0.023444965146643318711724905867463828235",
      "cumulativeNetCashFlow": "14395964.33186435296430713452055629688544",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2031,
      "leveredIrrNominal": "0.06155886083990722915104676360442681470905",
      "leveredIrrReal": "0.03047981096096002394391089040937004028823",
      "netWorthMultiple": "4.849584969551624456260496201089295730489",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "38509337.44438102279439654037734743416161",
      "totalPrincipalRepaid": "9515405.132986767233721951858233939391679",
    },
    "projection": "59714c28df12fec7dd118cf42ccffa5f8417ffc3fccfe8f8f53e73d771d43dc8",
    "propertyProjections": [
      "217ed8219064ad403c859c0a8f3fecf64decf6f7f1c9aabe0673c249e7a4838a",
      "1ab244c785b7d98c92f0cbf359ee9739f32dec9848300b4c5bf940e5b54577a7",
      "50a38f5fe3f1511ccf7e6604437a83159125e84755be1361ea100302765f3f6f",
    ],
    "schedules": "457dc7bf455f1cdc88400a81b7f70d13eb184ae15ca33588fbf314eb51ba619f",
    "snapshotsClosedForm": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "a890b29220a6d63e356fe078a345ecf0bdac2afaaabc531e3740b17d8e55260b",
      "93bd4cb6fbc7fa7ccdef640586856bb807e569ff4e03994026afbfe328dc0357",
      "45c4c053827221782069efd450b621b7bb0b7507a4d7376798aa1d2d7dab2645",
      "2ffea4dcbd212cadaa29a5824553236826397e54535c44174ff2c6f65de309db",
      "77b2852f3af68e9203d085f3cdd28660d9d849f8ff7a324dd387f48effcf0841",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "4ed989890849de8dace44b77f996d941ae89dae7fa9b626074ffa33e156534a7",
      "d6e8df42f5faa9ae8895a1d211465c36fcb094f44a80fdbe4e14f30663f962af",
      "3baf16af6275c90f96f887d1afccd9445e01d5dabd2b29cc532a3650dabfe927",
      "b6685dd60eb9958b1c5a8100f88fc4f21f2c4757dc57f55c92ba8530824ba93d",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
}
`;

exports[`P4a golden master (full precision) > scenario levels on seed and mixed 1`] = `
{
  "mixed": {
    "cpi": "0bc9d141588bdb6ff26178c4429218f422287012121e40f6ed6561d1c3059697",
    "kpis": {
      "cagrNominal": "0.044984970930242354600116418435305297985",
      "cagrReal": "0.004793241279079187115496556187793555755",
      "cumulativeNetCashFlow": "-6008056.792783430238117173346244491820627",
      "debtFreeYear": 2056,
      "firstCashFlowPositiveYear": 2051,
      "leveredIrrNominal": "0.03675742278693847585324672166962045594122",
      "leveredIrrReal": "-0.003117862704866849674067985631609190022574",
      "netWorthMultiple": "3.74370252944214146580272763623924133937",
      "netWorthNominal": "80253066.36015929724689365338793870331326",
      "netWorthReal": "24743518.52094685401498463061502886007416",
      "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
    },
    "projection": "b102903d9293d4455f266b0db3b9cf7cd6141c60466e4343c4259fdf1e51c684",
    "propertyProjections": [
      "9ccec678fac8567b50cf2e8bfb1e3b1f6397cbe8acc1b33800e0906dc3bbe8b1",
      "d4c9de36a4171f36da10d87555f75769d13f3e775614e8a86ddb781291865496",
      "e9914ad2c0d7de1bca080d7d5c6b3c8cbfeb4705d8cb39856f0f250350fd21eb",
      "62a95f592d339926c4a90e49402b2d4093c12bb161d80ece922a9406fc519a7d",
      "1dde0e8b65061770336d2090f30a200b3c132d056f32179019b1b4dcae7979f0",
      "5b7ad9a3bb8d7467485d1839eb5ac0b6f055c31a04913e1bcc5fb869446beb98",
    ],
    "schedules": "bd8a4270f7850bda968da262c03caf28ecd260091d06ed20c56ec4565cdf3dda",
    "snapshotsClosedForm": [
      "33198f98a2347732310478fd874e3dc54abd887d52e4ccabe3f426cee850f231",
      "61450802b1754bd2efb69bc1e1ee222e1831cf0ee203fdd1527ae15461294778",
      "bb93b5c2f4bc473acd7036efc8b350b991fcc53c2f32726c524eda5fa9c13b71",
      "1b4cf36b4695b39e9bc144047f0595e908a8bc047706d7a5cb500ad444a8535b",
      "f7bc925c17783eb03264f2cad358a3cc95f9883eb4dc9f378aa1f5e062b50904",
      "368b1c2827d812080d1a8532292d397fed8916354452f65d6bf538482b0e41f4",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "04fdc03b370cae787876e59d6d1f734e4525f1b260557dc623b494c329536b1a",
      "f7d5a7f85e85609e0e07453a4238358b371f3c5f4cc9ade1328594154bb77e6e",
      "46b72f7585ecc81c002e7b10539038757e6c8918091b54f55ec66fa36d59f757",
      "0027dedd0f4bb19c206e7a4028738b6ffe73248737fc196a98d441edefb85697",
      "f26bbf41a7241907a03ae7e017d590ed123cdf2d2551a685c8cab41cd28e6e91",
      "5a489c1489aa2506dc48e42e9338cdfb3a5705c23b179f1cb4034b04351cce87",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "seed": {
    "cpi": "0bc9d141588bdb6ff26178c4429218f422287012121e40f6ed6561d1c3059697",
    "kpis": {
      "cagrNominal": "0.033769349624604923776239429114605288086",
      "cagrReal": "-0.005991009976341419445923625851341069148",
      "cumulativeNetCashFlow": "2216793.004478065960327404304881499751998",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2042,
      "leveredIrrNominal": "0.03409179190263499480834097354886580433233",
      "leveredIrrReal": "-0.00568096932438942950338578441460413159804",
      "netWorthMultiple": "2.708379680730611889797636856360915933062",
      "netWorthNominal": "52040418.31128935338278216564256108464623",
      "netWorthReal": "16045032.45451634591011153243837927473593",
      "totalPrincipalRepaid": "9515405.132986767233721951858233939391678",
    },
    "projection": "c1dda8c49fbfecb045c5f1856319d9a2b3fe026647f0a8ac389d7137cd95997c",
    "propertyProjections": [
      "9ccec678fac8567b50cf2e8bfb1e3b1f6397cbe8acc1b33800e0906dc3bbe8b1",
      "d4c9de36a4171f36da10d87555f75769d13f3e775614e8a86ddb781291865496",
      "e9914ad2c0d7de1bca080d7d5c6b3c8cbfeb4705d8cb39856f0f250350fd21eb",
    ],
    "schedules": "40de7b32f5e7a255e3cdbd40c425489e80baeadba4c264df5124519f65a25777",
    "snapshotsClosedForm": [
      "166b10fc36dd88b9cc1acb0c3c36e39b62e55b923c59ed9fb117584cdd4d82e7",
      "1701f7cdd3a63b07bf4005336fcb49ab953856a073ded84c5b0c48fa4a14ad9a",
      "cab18a87d167d2e40d1770b6c6f34228cd28dc2051a122efca123d5b81aeee06",
      "4209fdca2fdd22bab4369f931c6af3ce92c4f9becb2c58fa47a043434f560101",
      "216da9259c7d639a96ca16d26fcd690248d5663ef5deb296d1d00bf7d0257beb",
      "f1a799ce39e594d308cce272675e9703cb571916fa99035a22f723c5e29258ce",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "166b10fc36dd88b9cc1acb0c3c36e39b62e55b923c59ed9fb117584cdd4d82e7",
      "1f1e61af751e02b8cec6eadb61cb31ad2b753cab0bdd9c884f803e39a976bc14",
      "131f387524d208fff6861ece7101bab6f7dfaa8ff2e1a1c861f4c29ba1e6b2ea",
      "b10ca126368f3db330794fab34781a2772abd28079f4dd4f4084536016476551",
      "72a72d70b52a483b5d7b745c1fac2999841035e4e2bb58c6039407e0846434c9",
      "2b967eb57d8af0bba3493d708da02a5217c67288ace52b488c7e40965f45c1e5",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
}
`;

exports[`P4a golden master (full precision) > scenario rateShock on seed and mixed 1`] = `
{
  "mixed": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.065304150866868528139064126668881980432",
      "cagrReal": "0.039321122796944905501525977237933639446",
      "cumulativeNetCashFlow": "14029074.79906720947566629775785619048405",
      "debtFreeYear": 2056,
      "firstCashFlowPositiveYear": 2037,
      "leveredIrrNominal": "0.06677846148925791740919022387856784916965",
      "leveredIrrReal": "0.0407594746236662607008494063620673841797",
      "netWorthMultiple": "6.671270901435258693792364652138901632503",
      "netWorthNominal": "143010814.0668065722076036079333399803885",
      "netWorthReal": "68179359.50812580922048359424316863375379",
      "totalPrincipalRepaid": "18215405.13298676723372195185823393939174",
    },
    "projection": "b2bd0f5128bfdf92f504e09ab4d386e69904fd6a2f1d6fd415f606a88590e3ab",
    "propertyProjections": [
      "ca6dce4075d0403e3de060d3eddaa5a8e8760f4628a59b8341d57480f127578b",
      "8722da417c503c5c79d708dfa840f7869cf7c95b60da31f84d91ec6a5eee7931",
      "80b624c56efcc623055a4bc0f16a996a8b24c915d10f875b5b52104906fd0660",
      "928f8e176ad73baf776918b3804de53e010b49616987ac9c3ece6dc95cd632c4",
      "c501daf717a42cceb36dd52fbb84f42d26bd833a285d667975f71b8a099404bb",
      "4320c44f3cb904c104af191b8d2d3f281fd46a168d2ddb7c6aebdaf71988aabb",
    ],
    "schedules": "970a028eb5515f8c995cf6b089e0a33c05102162682e22c6f21d6894c8e7ab22",
    "snapshotsClosedForm": [
      "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
      "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
      "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
      "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
      "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
      "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
      "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
      "d45a6e06d153e855d67de26fe1be4b17b21010fc6d0f066592590d9726e03651",
      "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "seed": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.054039336872146196791459810077636764323",
      "cagrReal": "0.02833106036306946028435103422208464812",
      "cumulativeNetCashFlow": "14340861.44000086091348630842069162082928",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2033,
      "leveredIrrNominal": "0.06135477799829812169812859323769771435785",
      "leveredIrrReal": "0.03546807609590060667015265494228515308353",
      "netWorthMultiple": "4.849584969551624456260496201089295730489",
      "netWorthNominal": "93182810.46309116799322220818079340072843",
      "netWorthReal": "44424223.27288347498315587028310329867364",
      "totalPrincipalRepaid": "9515405.132986767233721951858233939391689",
    },
    "projection": "7f3b4efb9e37450a2ed69f1bef3b8f5a0e1cb66c3f307d35288299018adcf7fd",
    "propertyProjections": [
      "ca6dce4075d0403e3de060d3eddaa5a8e8760f4628a59b8341d57480f127578b",
      "8722da417c503c5c79d708dfa840f7869cf7c95b60da31f84d91ec6a5eee7931",
      "80b624c56efcc623055a4bc0f16a996a8b24c915d10f875b5b52104906fd0660",
    ],
    "schedules": "76fc87b5691711696e1639293b03d2e69986a875d7a2b51a587c652d34d5886a",
    "snapshotsClosedForm": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "a890b29220a6d63e356fe078a345ecf0bdac2afaaabc531e3740b17d8e55260b",
      "93bd4cb6fbc7fa7ccdef640586856bb807e569ff4e03994026afbfe328dc0357",
      "45c4c053827221782069efd450b621b7bb0b7507a4d7376798aa1d2d7dab2645",
      "2ffea4dcbd212cadaa29a5824553236826397e54535c44174ff2c6f65de309db",
      "77b2852f3af68e9203d085f3cdd28660d9d849f8ff7a324dd387f48effcf0841",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "4ed989890849de8dace44b77f996d941ae89dae7fa9b626074ffa33e156534a7",
      "d6e8df42f5faa9ae8895a1d211465c36fcb094f44a80fdbe4e14f30663f962af",
      "3baf16af6275c90f96f887d1afccd9445e01d5dabd2b29cc532a3650dabfe927",
      "0cbbbb706d426ae17bd95166750799c7927b59f512db7ab3ce0cdcbda76af3b3",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
}
`;

exports[`P4a golden master (full precision) > scenario valueShock on seed and mixed 1`] = `
{
  "mixed": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.057409688853674477179850297618629205215",
      "cagrReal": "0.031619208637731197248634436701101663625",
      "cumulativeNetCashFlow": "14749950.47501994320285082934214499464348",
      "debtFreeYear": 2056,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.06049005444463400032323319166494002274715",
      "leveredIrrReal": "0.03462444336061853691552392398023130226651",
      "netWorthMultiple": "5.337016721148206955033891721711121306002",
      "netWorthNominal": "114408651.2534452577660828863466719843108",
      "netWorthReal": "54543487.60650064737638687539453490700303",
      "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
    },
    "projection": "1ae00fe40ad3eb16c5e8c727a4047013c0b032fe32eb76d44ae7544a749f2f02",
    "propertyProjections": [
      "b6118398cced8fcdfce8cd5e90ae213f22205c88ff0780d41175d7a0f7910cc3",
      "8264ed3da809f15aaed07a4ad7cf2e97a325f5865d4e9fd4b9c03a5a76490e65",
      "3bd7029f99bd3370f96ace5d047447fde7c9ef7f3bd1aec2d7856890f69c9975",
      "613c377573bf253f12d08e2a2eae5a0f76700042843a3477afbc1b844b029f33",
      "4a74e1373ddcd97c1562e633a54152762e54779d15d3a95a75bf7e92af5eb8f1",
      "6937d99d1b5a9598890f51ec3e157996fee77e8734454ab867477d1bb619d86a",
    ],
    "schedules": "3c10916436cbe0f0f944e69ff98649cc5ab4189402f92bd776dc10dc3df16d0b",
    "snapshotsClosedForm": [
      "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
      "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
      "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
      "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
      "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
      "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
      "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
      "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
      "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "seed": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.046228353033795140269759080522076911535",
      "cagrReal": "0.020710588325653795385130810265440889302",
      "cumulativeNetCashFlow": "14705700.29356877702510032805818120955501",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2031,
      "leveredIrrNominal": "0.05520512115978473861865882810207040165565",
      "leveredIrrReal": "0.0294684108875948652314646913907836278668",
      "netWorthMultiple": "3.879667975641299565008396960871436584391",
      "netWorthNominal": "74546248.37047293439457776654463472058274",
      "netWorthReal": "35539378.61830677998652469622648263893891",
      "totalPrincipalRepaid": "9515405.132986767233721951858233939391679",
    },
    "projection": "61915c104cae6fc5e54ea5b572412d8ca4bbfbeb9e493b312fb2ee02846e3cbd",
    "propertyProjections": [
      "b6118398cced8fcdfce8cd5e90ae213f22205c88ff0780d41175d7a0f7910cc3",
      "8264ed3da809f15aaed07a4ad7cf2e97a325f5865d4e9fd4b9c03a5a76490e65",
      "3bd7029f99bd3370f96ace5d047447fde7c9ef7f3bd1aec2d7856890f69c9975",
    ],
    "schedules": "457dc7bf455f1cdc88400a81b7f70d13eb184ae15ca33588fbf314eb51ba619f",
    "snapshotsClosedForm": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "a890b29220a6d63e356fe078a345ecf0bdac2afaaabc531e3740b17d8e55260b",
      "93bd4cb6fbc7fa7ccdef640586856bb807e569ff4e03994026afbfe328dc0357",
      "45c4c053827221782069efd450b621b7bb0b7507a4d7376798aa1d2d7dab2645",
      "2ffea4dcbd212cadaa29a5824553236826397e54535c44174ff2c6f65de309db",
      "77b2852f3af68e9203d085f3cdd28660d9d849f8ff7a324dd387f48effcf0841",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "4ed989890849de8dace44b77f996d941ae89dae7fa9b626074ffa33e156534a7",
      "d6e8df42f5faa9ae8895a1d211465c36fcb094f44a80fdbe4e14f30663f962af",
      "3baf16af6275c90f96f887d1afccd9445e01d5dabd2b29cc532a3650dabfe927",
      "b6685dd60eb9958b1c5a8100f88fc4f21f2c4757dc57f55c92ba8530824ba93d",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
}
`;

exports[`P4a golden master (full precision) > scenario valueShockYear0 on seed and mixed 1`] = `
{
  "mixed": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.067491758584682818783376348857847372063",
      "cagrReal": "0.041455374228958847593537901324729143476",
      "cumulativeNetCashFlow": "14749950.47501994320285082934214499464348",
      "debtFreeYear": 2056,
      "firstCashFlowPositiveYear": 2036,
      "leveredIrrNominal": "0.06964306048965683854784503026280617632445",
      "leveredIrrReal": "0.04355420535576276872685719254718605952807",
      "netWorthMultiple": "7.094730843877356666129356068982824032324",
      "netWorthNominal": "128709732.6601259149868432471400059823497",
      "netWorthReal": "61361423.55731322829843523481885177037843",
      "totalPrincipalRepaid": "18215405.13298676723372195185823393939163",
    },
    "projection": "90de01f4eed4dbf03359ca4407dd23795b63ae8bf7a237618d1cfc903e1a37c5",
    "propertyProjections": [
      "02b75ae2de6b9200bef065711519d41645f964652aed17330c8fbecb69142949",
      "0e5fadf96335bf1bf21475a2d7c50954f8fe265a08f2e2a67d72fdfdfc027767",
      "dbb2eac628ef4cdb2c38616b98c0b9e1abec016ac52b01764fc515caaba7e225",
      "c2ec42db193e59901fb91fa3522c25a04b68dcf3d85aa79dd280bde42d1288c9",
      "0bdfcfe1d2d8f32a31498af97f6f4a434f372c9ee5516e660da74ba98e964aef",
      "35154f7e75f310c511ebf15e22e9b0272675a57a33fd98fbef4ca02fd1f422a4",
    ],
    "schedules": "3c10916436cbe0f0f944e69ff98649cc5ab4189402f92bd776dc10dc3df16d0b",
    "snapshotsClosedForm": [
      "5f380334c881f43150d118026273d574ea8b728d3470318cd4e86473df2a41f1",
      "dd2f778027d613dd2b7bdd785e676639ca52c6c99b61d56e99d8a3590f0731e4",
      "d7dff46041a8e3828f77b0ec11248d9c47c920cfd961db9c9ca1b4f748edec5b",
      "c734c346d7a310b43d6bb91f3e45e0eba6110a9dcfb56dfebada56421ee00f58",
      "4bcdf4b6ef56f46570b1a6183b76f6cf52faaa0f49a6bb020e492433d0c056e2",
      "c314cd82439b5a465823ec1ff4bc7c4d6fca79aa48cb2b031151ba957ab0e0af",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "53b8adbafaeedf0a29a50fd22548c9714f59202e4ad78be317178504e09722e6",
      "ca9565b410dfad52b3f4a0f0b3e5ec861b763507d335b1f5aae3b4aa75446dda",
      "020a00c66fdc3360d5d57533c1572deebf6678c07e9e11c38bcfe3267b077fb0",
      "b27ee14713667593a1c5678a11bc5b10147a269da278239d889502950b6f2aed",
      "a5a1c953316d2ba8fbc1bb9ffe057e43fbb07d2903262644e9a2ff710f67b2e1",
      "0845babf76db45310e2da7c382f3c174b8b0b5131d6f90c9d6d568439fa9a659",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
  "seed": {
    "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
    "kpis": {
      "cagrNominal": "0.056029691746267989883973596497916726689",
      "cagrReal": "0.030272869996359014520949850241869977257",
      "cumulativeNetCashFlow": "14705700.29356877702510032805818120955501",
      "debtFreeYear": 2052,
      "firstCashFlowPositiveYear": 2031,
      "leveredIrrNominal": "0.06474853671644619189373681678034699871225",
      "leveredIrrReal": "0.03877906021116701677786675617198852705772",
      "netWorthMultiple": "5.131967234487562765922497787349455504772",
      "netWorthNominal": "83864529.41678205119389998736271406065559",
      "netWorthReal": "39981800.94559512748484028325479296880628",
      "totalPrincipalRepaid": "9515405.132986767233721951858233939391679",
    },
    "projection": "ed6a83b31edc1b986d5d7f3e6bd5cae9397ac35ea4ef8dc51bba64642f7e1253",
    "propertyProjections": [
      "02b75ae2de6b9200bef065711519d41645f964652aed17330c8fbecb69142949",
      "0e5fadf96335bf1bf21475a2d7c50954f8fe265a08f2e2a67d72fdfdfc027767",
      "dbb2eac628ef4cdb2c38616b98c0b9e1abec016ac52b01764fc515caaba7e225",
    ],
    "schedules": "457dc7bf455f1cdc88400a81b7f70d13eb184ae15ca33588fbf314eb51ba619f",
    "snapshotsClosedForm": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "a890b29220a6d63e356fe078a345ecf0bdac2afaaabc531e3740b17d8e55260b",
      "93bd4cb6fbc7fa7ccdef640586856bb807e569ff4e03994026afbfe328dc0357",
      "45c4c053827221782069efd450b621b7bb0b7507a4d7376798aa1d2d7dab2645",
      "2ffea4dcbd212cadaa29a5824553236826397e54535c44174ff2c6f65de309db",
      "77b2852f3af68e9203d085f3cdd28660d9d849f8ff7a324dd387f48effcf0841",
      "ASOF_BEFORE_BASEDATE",
    ],
    "snapshotsWithSchedules": [
      "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
      "4ed989890849de8dace44b77f996d941ae89dae7fa9b626074ffa33e156534a7",
      "d6e8df42f5faa9ae8895a1d211465c36fcb094f44a80fdbe4e14f30663f962af",
      "3baf16af6275c90f96f887d1afccd9445e01d5dabd2b29cc532a3650dabfe927",
      "b6685dd60eb9958b1c5a8100f88fc4f21f2c4757dc57f55c92ba8530824ba93d",
      "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
      "ASOF_BEFORE_BASEDATE",
    ],
  },
}
`;

exports[`P4a golden master (full precision) > seed 1`] = `
{
  "cpi": "0a3b06089fb7430925b924438fe15e7dba95801078e5d1e6a1f80d5ef7d568e4",
  "kpis": {
    "cagrNominal": "0.054039336872146196791459810077636764323",
    "cagrReal": "0.02833106036306946028435103422208464812",
    "cumulativeNetCashFlow": "14705700.29356877702510032805818120955501",
    "debtFreeYear": 2052,
    "firstCashFlowPositiveYear": 2031,
    "leveredIrrNominal": "0.0617951279454441559924049442997784353794",
    "leveredIrrReal": "0.03589768580043332241169551366510859224948",
    "netWorthMultiple": "4.849584969551624456260496201089295730489",
    "netWorthNominal": "93182810.46309116799322220818079340072843",
    "netWorthReal": "44424223.27288347498315587028310329867364",
    "totalPrincipalRepaid": "9515405.132986767233721951858233939391679",
  },
  "projection": "1ae510a75ee5ddc4e99d385683103c13d31f3e29d84858ee3418ef308a00487b",
  "propertyProjections": [
    "7a14527cf97195fcabcdbd2f904ccfdc32f738ff7ded2894e86271a2b8cc8329",
    "1bf6eb69d2a7b07a39704c34c236f6617a2df4da38f0b8ba7af801739c3b9463",
    "90fd4ac7bfdd9c224682d040829c77234f22c7ff405e49a1c7639a0f5be9cd9c",
  ],
  "schedules": "457dc7bf455f1cdc88400a81b7f70d13eb184ae15ca33588fbf314eb51ba619f",
  "snapshotsClosedForm": [
    "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
    "a890b29220a6d63e356fe078a345ecf0bdac2afaaabc531e3740b17d8e55260b",
    "93bd4cb6fbc7fa7ccdef640586856bb807e569ff4e03994026afbfe328dc0357",
    "45c4c053827221782069efd450b621b7bb0b7507a4d7376798aa1d2d7dab2645",
    "2ffea4dcbd212cadaa29a5824553236826397e54535c44174ff2c6f65de309db",
    "77b2852f3af68e9203d085f3cdd28660d9d849f8ff7a324dd387f48effcf0841",
    "ASOF_BEFORE_BASEDATE",
  ],
  "snapshotsWithSchedules": [
    "d89dcf655295caaa0867991e94123fffad55745ecd9886c2a99c999d57c3c2aa",
    "4ed989890849de8dace44b77f996d941ae89dae7fa9b626074ffa33e156534a7",
    "d6e8df42f5faa9ae8895a1d211465c36fcb094f44a80fdbe4e14f30663f962af",
    "3baf16af6275c90f96f887d1afccd9445e01d5dabd2b29cc532a3650dabfe927",
    "b6685dd60eb9958b1c5a8100f88fc4f21f2c4757dc57f55c92ba8530824ba93d",
    "45ba6c3520c81a3259c69724bfb659482944e3b15b82ba2a3441f8b87201d9f7",
    "ASOF_BEFORE_BASEDATE",
  ],
}
`;

exports[`P4a golden master (full precision) > snapshot per property at baseDate (closed form) 1`] = `
[
  "05b505c9e968c50b2682f5a420feaa681fb93cec08411fba8bee7097e2716ec8",
  "e11027a36c50ced62436284f30ce388148495c91552f2e699d715c06738830a0",
  "16c67980705cb8d0d2f57fbe000e8eb469fe8ccc3107d6c82cc55a12feb59b6c",
]
`;
